# hueristic-guidance

./: .gitignore  Cargo.toml  readme.md
crates/frontend/: Cargo.toml  Trunk.toml  index.html
crates/frontend/src/app/: api.rs  mod.rs
crates/frontend/src/app/components/: agent_selector.rs  bulk_test.rs  candidate_panel.rs  mod.rs  prompt_input.rs  token_stream.rs
crates/inference/: Cargo.toml
crates/inference-types/: Cargo.toml
crates/inference-types/src/: lib.rs
crates/inference/src/: constraints.rs  conversation_loop.rs  csv_loader.rs  engine.rs  grammar.rs  inference.rs  lib.rs  llama_tokenizer.rs  token.rs
crates/inference/templates/: grammar.lark  system_prompt.txt
crates/server/: Cargo.toml
crates/server/src/: embedding.rs  main.rs  optimize.rs  state.rs
crates/server/src/db/: mod.rs
crates/server/src/routes/: agents.rs  bulk_test.rs  infer.rs  mod.rs  optimize.rs
data/: pemazyre.csv
migrations/: 001_initial.sql  002_embedding_constants.sql  003_bulk_tests.sql
prompts/: multi-prompt.md  prompt.md
src/: constraints.rs  conversation_grammar.rs  conversation_loop.rs  csv_loader.rs  grammar.rs  inference.rs  llama_tokenizer.rs  main.rs  token.rs
