[workspace]
members = [
    "crates/inference-types",
    "crates/inference",
    "crates/server",
    "crates/frontend",
]
resolver = "2"

[workspace.dependencies]
anyhow     = "1.0"
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio      = { version = "1", features = ["full"] }
thiserror  = "2.0"
tracing    = "0.1"
