[package]
name    = "frontend"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "frontend"
path = "src/main.rs"

[dependencies]
inference-types = { path = "../inference-types" }
serde           = { workspace = true }
serde_json      = { workspace = true }
leptos          = { version = "0.7", features = ["csr"] }
wasm-bindgen    = "0.2"
web-sys         = { version = "0.3", features = [
    "EventSource",
    "MessageEvent",
    "ErrorEvent",
    "CloseEvent",
] }
js-sys          = "0.3"
gloo-net        = { version = "0.6", features = ["http"] }

[profile.release]
opt-level     = "z"
lto           = true
codegen-units = 1
