[package]
name    = "inference"
version = "0.1.0"
edition = "2024"

[dependencies]
inference-types = { path = "../inference-types" }
anyhow          = { workspace = true }
serde           = { workspace = true }
tokio           = { workspace = true }
csv             = "1.3"
llama-cpp-2     = "0.1.128"
llguidance      = "1.4.0"
askama          = "0.12"

[lib]
name = "inference"
